add to cart features & check out page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 <a class="nav-link" href="#">Return & Orders</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Cart</a>
+                <a class="nav-link cart-css" href="checkout.html">Cart</a>
+                <p class="total-quantity js-total-quantity">(0)</p>
               </li>
             </ul>
             <form class="d-flex">
