--- a/checkout.html
+++ b/checkout.html
@@ -64,66 +64,8 @@
         </div>
         <div class="container review-order-container">
           <div
-            class="checkout-row order-xl-1 order-md-1 order-sm-2 order-2 js-checkout-container"
-          >
-            <div class="checkout-container">
-              <div>
-                <p class="delivery-date">
-                  Delivery date: Wednesday, January 10
-                </p>
-                <div class="delivery-details-container">
-                  <div class="delivery-image">
-                    <img
-                      src="/images/products/adults-plain-cotton-tshirt-2-pack-teal.jpg"
-                    />
-                  </div>
-                  <div class="delivery-control">
-                    <p class="delivery-name">
-                      Adults Plain Cotton T-Shirt - 2 Pack
-                    </p>
-                    <p>$7.99</p>
-                    <div class="delivery-update-quantity">
-                      <p>Quantity: 1</p>
-                      <a href="#">Update</a>
-                      <a href="#">Delete</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div>
-                <div class="delivery-option">
-                  <p>Choose a delivery options:</p>
-                  <div class="delivery-period-1">
-                    <input type="radio" />
-                    <div class="delivery-option-1">
-                      <p style="margin-bottom: 0px; color: #002044d8">
-                        <b>Wednesday, January 10</b>
-                      </p>
-                      <p>FREE Shipping</p>
-                    </div>
-                  </div>
-                  <div class="delivery-period-1">
-                    <input type="radio" />
-                    <div class="delivery-option-1">
-                      <p style="margin-bottom: 0px; color: #002044d8">
-                        <b> Thursday, January 4</b>
-                      </p>
-                      <p>$4.99 - Shipping</p>
-                    </div>
-                  </div>
-                  <div class="delivery-period-1">
-                    <input type="radio" />
-                    <div class="delivery-option-1">
-                      <p style="margin-bottom: 0px; color: #002044d8">
-                        <b>Wednesday, January 10</b>
-                      </p>
-                      <p>$9.99 - Shipping</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+            class="order-xl-1 order-md-1 order-sm-2 order-2 js-checkout-container"
+          ></div>
           <div class="order-sum-row order-xl-2 order-md-2 order-sm-1 order-1">
             <div class="order-summary-container">
               <div>
