order summary page price & tax

--- a/checkout.html
+++ b/checkout.html
@@ -66,34 +66,9 @@
           <div
             class="order-xl-1 order-md-1 order-sm-2 order-2 js-checkout-container"
           ></div>
-          <div class="order-sum-row order-xl-2 order-md-2 order-sm-1 order-1">
-            <div class="order-summary-container">
-              <div>
-                <h4>Order</h4>
-                <div class="orderSummaryItem">
-                  <p>Items:</p>
-                  <p>0.00</p>
-                </div>
-                <div class="orderSummaryItem">
-                  <p>Shipping & handling:</p>
-                  <p>0.00</p>
-                </div>
-                <div class="orderSummaryItem">
-                  <p>Total before tax:</p>
-                  <p>0.00</p>
-                </div>
-                <div class="orderSummaryItem">
-                  <p>Estimated tax (10%)</p>
-                  <p>0.00</p>
-                </div>
-                <hr />
-                <div class="orderSummaryItem">
-                  <h4 style="color: brown">Order total:</h4>
-                  <h4 style="color: brown">0.00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div
+            class="order-sum-row order-xl-2 order-md-2 order-sm-1 order-1 js-order-sum-row"
+          ></div>
         </div>
       </main>
     </div>
