--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="container top-collection">
           <h1 class="top-collection-title">TOP COLLECTION</h1>
         </div>
-        <div class="container-fluid products-main-container">
+        <div class="container products-main-container">
           <div class="row d-flex justify-content-center js-product-row">
             <!-- product-container -->
           </div>
