--- a/checkout.html
+++ b/checkout.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="main/css/main.css" />
     <link rel="stylesheet" href="main/css/checkout.css" />
+    <link rel="stylesheet" href="main/css/index.css" />
   </head>
   <body>
     <div>
@@ -42,17 +43,16 @@
                 <p class="total-quantity js-total-quantity">(0)</p>
               </li>
             </ul>
-            <form class="d-flex">
+            <div class="d-flex" id="product-form-field">
               <input
+                id="js-search-input"
                 class="form-control me-2"
                 type="search"
-                placeholder="Search"
+                placeholder="Search for product"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-success" type="submit">
-                Search
-              </button>
-            </form>
+              <button class="btn btn-outline-success">Search</button>
+            </div>
           </div>
         </div>
       </nav>
@@ -62,13 +62,15 @@
             <h3 class="review-title">Review your order</h3>
           </div>
         </div>
-        <div class="container review-order-container">
-          <div
-            class="order-xl-1 order-md-1 order-sm-2 order-2 js-checkout-container"
-          ></div>
-          <div
-            class="order-sum-row order-xl-2 order-md-2 order-sm-1 order-1 js-order-sum-row"
-          ></div>
+        <div>
+          <div class="container review-order-container">
+            <div
+              class="order-xl-1 order-md-1 order-sm-2 order-2 js-checkout-container"
+            ></div>
+            <div
+              class="order-sum-row order-xl-2 order-md-2 order-sm-1 order-1 js-order-sum-row"
+            ></div>
+          </div>
         </div>
       </main>
     </div>
