--- a/index.html
+++ b/index.html
@@ -55,12 +55,33 @@
           </div>
         </div>
       </nav>
-      <main>
-        <div class="container banner-img">
+      <main class="container">
+        <div class="banner-img">
           <img src="/images/banner.png" width="100%" style="margin-top: 70px" />
         </div>
-        <div class="container top-collection">
+        <div class="top-collection">
           <h1 class="top-collection-title">TOP COLLECTION</h1>
+        </div>
+        <div class="filter-function">
+          <h6>Filter</h6>
+          <div class="filter-container">
+            <div
+              class="d-flex align-items-center gap-3 filtering-container js-filtering-container"
+            >
+              <div class="js-rating-radio">
+                <input type="radio" id="ratingCheckbox" name="selectedFilter" />
+                <label for="ratingCheckbox">
+                  <p>High-low rating</p>
+                </label>
+              </div>
+              <div class="js-rating-price">
+                <input type="radio" id="priceCheckbox" name="selectedFilter" />
+                <label for="priceCheckbox">
+                  <p>Low-high price</p>
+                </label>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="container products-main-container">
           <div class="row d-flex justify-content-center js-product-row">
