--- a/checkout.html
+++ b/checkout.html
@@ -54,9 +54,7 @@
         </div>
         <div>
           <div class="container review-order-container">
-            <div
-              class="order-xl-1 order-md-1 order-sm-2 order-2 js-checkout-container"
-            ></div>
+            <div class="order-sm-2 order-2 js-checkout-container"></div>
             <div
               class="order-sum-row order-xl-2 order-md-2 order-sm-1 order-1 js-order-sum-row"
             ></div>
