resizing responsive design

--- a/checkout.html
+++ b/checkout.html
@@ -33,10 +33,9 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Return & Orders</a>
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link cart-css" href="checkout.html">Cart</a>
@@ -54,10 +53,14 @@
         </div>
         <div>
           <div class="container review-order-container">
-            <div class="order-sm-2 order-2 js-checkout-container"></div>
+            <div
+              class="order-md-1 order-sm-2 order-2 js-checkout-container"
+            ></div>
             <div
               class="order-sum-row order-xl-2 order-md-2 order-sm-1 order-1 js-order-sum-row"
-            ></div>
+            >
+              <!-- Product-checkout-containers -->
+            </div>
           </div>
         </div>
       </main>
