--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Return & Orders</a>
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link cart-css" href="checkout.html">Cart</a>
@@ -55,24 +54,26 @@
           </div>
         </div>
       </nav>
-      <main class="container">
-        <div class="title-get-start row">
-          <div class="col">
-            <h1>Get Your Best <br />Product Here</h1>
-            <p>
-              Elevate your shopping experience!<br />Dream items,
-              wallet-friendly prices
-            </p>
-            <a href="#bodyProduct"><button>Get Start</button></a>
+      <main>
+        <div class="container">
+          <div class="title-get-start row">
+            <div class="col">
+              <h1>Get Your Best <br />Product Here</h1>
+              <p>
+                Elevate your shopping experience!<br />Dream items,
+                wallet-friendly prices
+              </p>
+              <a href="#bodyProduct"><button>Get Start</button></a>
+            </div>
+            <div class="col">
+              <img src="/images/banner.png" />
+            </div>
           </div>
-          <div class="col">
-            <img src="/images/banner.png" />
+          <div class="top-collection mt-5">
+            <h1 class="top-collection-title">TOP COLLECTION</h1>
           </div>
         </div>
-        <div class="top-collection mt-5">
-          <h1 class="top-collection-title">TOP COLLECTION</h1>
-        </div>
-        <div id="bodyProduct" class="body-products container-fluid">
+        <div id="bodyProduct" class="body-products">
           <div class="filter-function">
             <h6>Filter</h6>
             <div class="filter-container">
@@ -100,7 +101,7 @@
               </div>
             </div>
           </div>
-          <div class="container products-main-container">
+          <div class="container-fluid products-main-container">
             <div class="row d-flex justify-content-center js-product-row">
               <!-- product-container -->
             </div>
